<resources>
    <string name="app_name">Menu Semanal</string>
    <string name="title_home">Sugerencias</string>
    <string name="title_recetas">Recetas</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ingredientes">Ingredientes</string>
    <string name="unidad">Unidad</string>
    <string name="agregar_ingredientes">Agregar Ingredientes</string>
    <string name="agregar_receta">--- RECETA ---</string>
    <string name="nombre">nombre de receta:</string>
    <string name="lista_ingredientes"> Lista ingredientes: </string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="acceder">Acceder</string>
    <string name="desayuno"><u>DESAYUNO</u></string>
    <string name="almuerzo"><u>ALMUERZO</u></string>
    <string name="merienda"><u>MERIENDA</u></string>
    <string name="cena"><u>CENA</u></string>
    <string name="nomTituloNotifi"><b>NOMBRE</b></string>
    <string name="cantTituloNotifi"><b>CANTIDAD</b></string>
    <string name="comTituloNotifi"><b>LO TENGO</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>