<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tip.MenuSemanal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ingredientes"
        android:name="com.tip.MenuSemanal.ui.ingredientes.IngredientesFragment"
        android:label="@string/title_ingredientes"
        tools:layout="@layout/fragment_ingredientes" >
    </fragment>

    <fragment
        android:id="@+id/navigation_recetas"
        android:name="com.tip.MenuSemanal.ui.recetas.RecetasFragment"
        android:label="@string/title_recetas"
        tools:layout="@layout/fragment_recetas" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tip.MenuSemanal.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/agregarIngredientes"
        android:name="com.tip.MenuSemanal.AgregarIngredientes"
        android:label="fragment_agregar_ingredientes"
        tools:layout="@layout/fragment_agregar_ingredientes" >
        <action
            android:id="@+id/ir_a_altaIngredientes"
            app:destination="@id/navigation_ingredientes"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
</navigation>